--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 #hangman {
     width: 80%;
-    margin: 10vh auto;
+    margin: 0 auto;
 }
 
 #letters {
@@ -58,4 +58,29 @@
 
 #output img {
     width: 100%;
+}
+
+#gameStatus {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 10vh;
+    margin: 10px 0;
+    text-transform: uppercase;
+}
+
+#gameStatus button {
+    margin-top: 5px;
+    padding: 5px 10px;
+    text-transform: uppercase;
+
+    background-color: white;
+    border: 2px solid black;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+#gameStatus button:hover {
+    color: white;
+    background-color: black;
 }
